--- a/client/src/pages/PagesCss/Mypage.css
+++ b/client/src/pages/PagesCss/Mypage.css
@@ -14,8 +14,9 @@
   margin-left: 100px;
   margin-right: 100px;
   width: 400px;
-  height: 100px;
-  line-height: 5.5rem;
+  height: 50px;
+  line-height: 3rem;
+  font-weight: 600;
 }
 
 .logout-Button {
