--- a/client/src/pages/PagesCss/My-Wise_saying.css
+++ b/client/src/pages/PagesCss/My-Wise_saying.css
@@ -52,9 +52,10 @@ li {
   margin: auto;
   margin-top: 20px;
   width: 600px;
-  height: 360px;
+  height: 300px;
   border: 1px solid black;
   border-radius: 20px;
+  margin-bottom: 20px;
 }
 
 .List-input {
